--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -83,7 +83,7 @@ layout: page
   <div class="row">
     <div class="column">
       <h2>About</h2>
-      <p>This exhibit was created by <a href="https://aweymo.github.io/base">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
+      <p>This exhibit was created by <a href="https://aweymo.github.io/base">Andrew Weymouth</a>, a Digital Initiatives Librarian for the University of Idaho, writer and exhibit designer, on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
       <p>Visit the collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     </div>
     <div class="column">
@@ -92,19 +92,3 @@ layout: page
       </a>
     </div>
   </div>
-
-  <!-- Fourth row -->
-  <div class="row">
-    <div class="column">
-      <img src="https://aweymo.github.io/losttacoma/objects/headshot.18.png" alt="Andrew Weymouth">
-    </div>
-    <div class="column">
-      <h2>About Andrew Weymouth</h2>
-      <p>Archivist, exhibit designer, and writer based in Tacoma, WA. Recipient of various grants and creator of digital exhibits on diverse topics.</p>
-      <p>Contact: <a href="mailto:andrewrainsweymouth@gmail.com">andrewrainsweymouth@gmail.com</a></p>
-    </div>
-  </div>
-</div>
-
-</body>
-</html>
