Revert "link updates"
This reverts commit c4312e9fc07a68dfe17936e5ba039babe06a385b.

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -54,8 +54,8 @@ layout: page
   <!-- First row -->
   <div class="row">
     <div class="column">
-      <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,</h2>
-      <p>consisting of 116 blueprints across 28 locations, including proposed buildings and demolished structures.</p>
+      <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection.</h2>
+      <p>Consisting of 116 blueprints across 28 locations, including proposed buildings and demolished structures.</p>
     </div>
     <div class="column">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt120">
@@ -68,7 +68,7 @@ layout: page
   <div class="row">
     <div class="column">
       <h2>Restoration</h2>
-      <p>Technical drawings have been reformatted and restored for legibility.</p>
+      <p>Scans of the blueprints may not be ideal. Technical drawings have been reformatted and restored for legibility.</p>
       <h2>Navigation</h2>
       <p>Explore detailed technical drawings within item pages. Expand images in the Buildings and Architects sections for archival records.</p>
     </div>
@@ -82,8 +82,8 @@ layout: page
   <!-- Third row -->
   <div class="row">
     <div class="column">
-      <h2>About</h2>
-      <p>This exhibit was created by <a href="https://aweymo.github.io/base">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
+      <h2>Restoration & Credits</h2>
+      <p>Performed by <a href="http://aweymouth.squarespace.com/">Andrew Weymouth</a> on behalf of the <a href="https://www.tacomalibrary.org/northwestroom/">Tacoma Public Library Northwest Room</a>.</p>
       <p>Visit the collection through Northwest ORCA <a href="https://northwestroom.tacomalibrary.org/index.php/lost-tacoma-project-collection">here</a>.</p>
     </div>
     <div class="column">
